frontend_tests/negative/import_cycle/lib/lib.go
package lib

import _ "example.com/renvotests/negative/cycle/cmd/app"
